example/secondfile/objects/Case.object
<CustomObject>
    <fields>
        <fullName>SubCategory__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Training/Certification</fullName>
                </value>
                <value>
                    <fullName>Quoting/Ordering</fullName>
                </value>
                <value>
                    <fullName>General Site Navigation</fullName>
                </value>
                <value>
                    <fullName>Development Funds (MDF/IDF)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Order Status Manager</fullName>
                </value>
                <value>
                    <fullName>eBill</fullName>
                </value>
                <value>
                    <fullName>eMaintenance</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Cancellation &amp; Disconnects</fullName>
                </value>
                <value>
                    <fullName>Disputes</fullName>
                </value>
                <value>
                    <fullName>Escalations</fullName>
                </value>
                <value>
                    <fullName>General Billing Questions</fullName>
                </value>
                <value>
                    <fullName>General Technical Information</fullName>
                </value>
                <value>
                    <fullName>Informational Requests</fullName>
                </value>
                <value>
                    <fullName>LOA/CFA Request</fullName>
                </value>
                <value>
                    <fullName>Order Status</fullName>
                </value>
                <value>
                    <fullName>RDS</fullName>
                </value>
                <value>
                    <fullName>Taxes and Exemptions</fullName>
                </value>
                <value>
                    <fullName>Trouble Ticket Creation</fullName>
                </value>
                <value>
                    <fullName>Trouble Ticket Escalation</fullName>
                </value>
                <value>
                    <fullName>TTU</fullName>
                </value>
                <value>
                    <fullName>Partner Exchange Portal</fullName>
                </value>
                <value>
                    <fullName>Business Direct</fullName>
                </value>
                <value>
                    <fullName>Mobility Platforms</fullName>
                </value>
                <value>
                    <fullName>MACD</fullName>
                </value>
                <value>
                    <fullName>Manual RDS</fullName>
                </value>
                <value>
                    <fullName>TTU Letter</fullName>
                </value>
                <value>
                    <fullName>CNR Notice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service Assurance</fullName>
                </value>
                <value>
                    <fullName>Service Delivery</fullName>
                </value>
                <value>
                    <fullName>System Access Issue</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>API Fallout</fullName>
                </value>
                <value>
                    <fullName>APEX Request</fullName>
                </value>
                <value>
                    <fullName>Order Manager Engagement</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                    <isActive>false</isActive>
                    <label>Test</label>
                </value>
                <value>
                    <fullName>Through Channel</fullName>
                    <isActive>false</isActive>
                    <label>Through Channel</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_fee_tax__c</fullName>
        <description>Billing</description>
        <label>Type of fee/tax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>